Added the category section in the HTML structure

--- a/news.html
+++ b/news.html
@@ -12,7 +12,17 @@
         <div id="search-bar">
             <input type="text" placeholder="Search for news">
             <i class="fa fa-search"></i>
-        </div>      
+        </div>  
+        <div id="main">
+            <p>Top Stories for you</p>
+            <div class="main-button">
+                <button class="button all">All</button>
+                <button class="button business">Business</button>
+                <button class="button politics">Politics</button>
+                <button class="button sports">Sports</button>
+                <button class="button entertainment">Entertainment</button>
+            </div>
+        </div>    
     </div>
 </body>
 </html>
