Added the news section in the HTML file

--- a/news.html
+++ b/news.html
@@ -22,7 +22,8 @@
                 <button class="button sports">Sports</button>
                 <button class="button entertainment">Entertainment</button>
             </div>
-        </div>    
+        </div>  
+        <div id="news-section"></div>  
     </div>
 </body>
 </html>
