Added show more button in the HTML file

--- a/news.html
+++ b/news.html
@@ -24,6 +24,7 @@
             </div>
         </div>  
         <div id="news-section"></div>  
+        <button class="show-button">Show More</button>
     </div>
 </body>
 </html>
