Added news.js script to the HTML

--- a/news.html
+++ b/news.html
@@ -26,5 +26,6 @@
         <div id="news-section"></div>  
         <button class="show-button">Show More</button>
     </div>
+    <script src="news.js"></script>
 </body>
 </html>
